--- a/findly-builder/src/app/components/app-menu/app-menu.component.html
+++ b/findly-builder/src/app/components/app-menu/app-menu.component.html
@@ -12,7 +12,7 @@
 				<button class="dropdown-toggle dropdown-input" ngbDropdownToggle>Default</button>                                            
 				<ul class="dropdown-menu content-menu faq-filter-add" ngbDropdownMenu>
 					<li><span class="list-name">Default</span></li>
-					<li><span class="list-name">Create new</span></li>
+					<li class="create"><span class="list-name ">Create new</span><span class="plus">+</span></li>
 				
 				</ul>
 			</div>
