--- a/findly-builder/src/app/components/add-faq/add-faq.component.html
+++ b/findly-builder/src/app/components/add-faq/add-faq.component.html
@@ -89,7 +89,7 @@
         </mat-chip>
         <input placeholder="Type & enter"
               (focus)= "getAltTags($event)"
-              [(ngModel)]="typedQuery"
+                [value]="typedQuery"
                [matChipInputFor]="chipList"
                [matAutocomplete]="suggestedItems"
                [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
