--- a/findly-builder/src/app/components/faq-source/faq-source.component.html
+++ b/findly-builder/src/app/components/faq-source/faq-source.component.html
@@ -242,9 +242,9 @@
                                         <ng-container *ngIf="selectedFaq && selectedFaq.conditionalAnswers && selectedFaq.conditionalAnswers.answers && selectedFaq.conditionalAnswers.answers.length">
                                             <ng-container *ngFor="let answer of selectedFaq.conditionalAnswers.answers">
                                                 <div *ngIf="selectedFaq.conditionalAnswers && selectedFaq.conditionalAnswers.conditions && selectedFaq.conditionalAnswers.conditions.length">
-                                                    <span *ngFor="let tags of selectedFaq.conditionalAnswers.conditions">{{tag.value}}</span>
+                                                    <span *ngFor="let tags of selectedFaq.conditionalAnswers.conditions">{{tags.value}}</span>
                                                 </div>
-                                                <div class="desc" *ngIf="answer.type==='javascript'" [innerHtml]='convertMDtoHTML.helpers.convertMDtoHTML(answer.payload)'></div>
+                                                <div class="desc" *ngIf="answer.type==='string'" [innerHtml]='convertMDtoHTML.helpers.convertMDtoHTML(answer.payload)'></div>
                                                  <div class="desc" *ngIf="answer.type==='javascript'">Javascript message</div>
                                             </ng-container> 
                                         </ng-container>
@@ -252,7 +252,7 @@
                                     <div>
                                         <ng-container *ngIf="selectedFaq && selectedFaq.defaultAnswers && selectedFaq.defaultAnswers.length">
                                             <ng-container *ngFor="let answer of selectedFaq.defaultAnswers">
-                                                <div class="desc" *ngIf="answer.type==='javascript'" [innerHtml]='convertMDtoHTML.helpers.convertMDtoHTML(answer.payload)'></div>
+                                                <div class="desc" *ngIf="answer.type==='string'" [innerHtml]='convertMDtoHTML.helpers.convertMDtoHTML(answer.payload)'></div>
                                                  <div class="desc" *ngIf="answer.type==='javascript'">Javascript message</div>
                                             </ng-container> 
                                         </ng-container>
