--- a/findly-builder/src/app/components/results-rules/results-rules.component.html
+++ b/findly-builder/src/app/components/results-rules/results-rules.component.html
@@ -109,70 +109,30 @@
             <ng-container >
               <perfect-scrollbar class="table-scroll-perfect rulse_tab if-select-all">
                 <div class="content-body" *ngFor="let rool of rules">
-                    <div class="col_ col-2">
-                      <div class="kr-sg-checkbox">
-                        <input id="checkbox-13" class="checkbox-custom" type="checkbox">
-                        <label for="checkbox-13" class="checkbox-custom-label"></label>
-                      </div> 
-                      <span>{{rool.name}}</span>
-                    </div>                    
-                    <div class="col_ col-7 definatation">{{rool.definitionStr}}</div>               
-                    <div class="actions draft-state col_ col-3 text-right pr-3">
-                      <img src="assets/icons/edit-rule.svg" class="ml-4" (click)="openAddRulesModal()">
-                      <img src="assets/icons/return.svg" class="ml-4">
-                      <img src="assets/icons/delete-table.svg" class="ml-4">
-                    </div>
-                    <div class="actions approve-state d-none col-3 text-right pr-3">
-                      <button class="kr-sg-button-primary btn_lg ml-4">Approve</button>
-                      <img src="assets/icons/return.svg" class="ml-4">
-                      <img src="assets/icons/delete-table.svg" class="ml-4">
-                    </div>
-                </div> 
-
-
-                <div class="content-body d-none">
-                    <div class="col_ col-2">
-                      <div class="kr-sg-checkbox">
-                        <input id="checkbox-13" class="checkbox-custom" type="checkbox">
-                        <label for="checkbox-13" class="checkbox-custom-label"></label>
-                      </div> 
-                      <span>Citi Bank</span>
-                    </div>                    
-                    <div class="col_ col-7 definatation">If <b>“Search Context.RecentSearches”</b> Contains <b>“Credit”</b> OR <b>“Card”</b> AND <b>“User Context.CustomerType”</b> Starts With <b>“Premium”</b> THEN Filter Results Containing <b>“Card Offers”</b> OR <b>“Card Rewards”</b></div>               
-                    <div class="actions draft-state col_ col-3 text-right pr-3">
-                      <img src="assets/icons/edit-rule.svg" class="ml-4" (click)="openAddRulesModal()">
-                      <img src="assets/icons/return.svg" class="ml-4">
-                      <img src="assets/icons/delete-table.svg" class="ml-4">
-                    </div>
-                    <div class="actions approve-state d-none col-3 text-right pr-3">
-                      <button class="kr-sg-button-primary btn_lg ml-4">Approve</button>
-                      <img src="assets/icons/return.svg" class="ml-4">
-                      <img src="assets/icons/delete-table.svg" class="ml-4">
-                    </div>
-                </div>  
-                <div class="content-body check-all-bg d-none">
-                  <div class="col_ col-2">
-                    <div class="kr-sg-checkbox">
-                      <input id="checkbox-13" class="checkbox-custom" type="checkbox">
-                      <label for="checkbox-13" class="checkbox-custom-label"></label>
-                    </div> 
-                    <span>Citi Bank</span>
-                  </div>                    
-                  <div class="col_ col-7 definatation">If <b>“Search Context.RecentSearches”</b> Contains <b>“Credit”</b> OR <b>“Card”</b> AND <b>“User Context.CustomerType”</b> Starts With <b>“Premium”</b> THEN Filter Results Containing <b>“Card Offers”</b> OR <b>“Card Rewards”</b></div>               
-                  <div class="actions draft-state col_ col-3 text-right pr-3">
-                    <img src="assets/icons/edit-rule.svg" class="ml-4" (click)="openAddRulesModal()">
-                    <img src="assets/icons/return.svg" class="ml-4">
-                    <img src="assets/icons/delete-table.svg" class="ml-4">
-                  </div>
-                  <div class="actions approve-state d-none col-3 text-right pr-3">
-                    <button class="kr-sg-button-primary btn_lg ml-4">Approve</button>
-                    <img src="assets/icons/return.svg" class="ml-4">
-                    <img src="assets/icons/delete-table.svg" class="ml-4">
-                  </div>
-              </div>        
+                    <ng-container>
+                      <div class="col_ col-2">
+                        <div class="kr-sg-checkbox">
+                          <input id="checkbox-13" class="checkbox-custom" type="checkbox">
+                          <label for="checkbox-13" class="checkbox-custom-label"></label>
+                        </div> 
+                        <span>{{rool.name}}</span>
+                      </div>                    
+                      <div class="col_ col-7 definatation">{{rool.definitionStr}}</div>               
+                      <div class="actions draft-state col_ col-3 text-right pr-3">
+                        <img src="assets/icons/edit-rule.svg" class="ml-4" (click)="openAddRulesModal()">
+                        <img src="assets/icons/return.svg" class="ml-4">
+                        <img (click)="deleteRule(rool)" src="assets/icons/delete-table.svg" class="ml-4">
+                      </div>
+                      <div class="actions approve-state d-none col-3 text-right pr-3">
+                        <button class="kr-sg-button-primary btn_lg ml-4">Approve</button>
+                        <img src="assets/icons/return.svg" class="ml-4">
+                        <img src="assets/icons/delete-table.svg" class="ml-4">
+                      </div>
+                    </ng-container>
+                </div>     
             </perfect-scrollbar>
             </ng-container>
-            <div class="footer-btns">
+            <div class="footer-btns d-none">
               <button class="kr-sg-button-primary btn_lg">Send for Review</button>
               <button class="kr-sg-button-danger btn_lg">Delete</button>
             </div>
