--- a/findly-builder/src/app/components/faq-source/faq-source.component.html
+++ b/findly-builder/src/app/components/faq-source/faq-source.component.html
@@ -235,7 +235,7 @@
                                         <img src="assets/icons/edit.svg" (click)="editThisQa()" ngbTooltip='Edit'  placement="bottom">
                                     </div>
                                     <div class="keywords">
-                                        <span class="key-title">Keywords :</span>
+                                        <span class="key-title">Key Terms :</span>
                                         <span class="keys" *ngFor="let keyword of selectedFaq.keywords">{{keyword}}</span>
                                     </div>  
                                     <div class="conditionalBlock" (click)="logAns(selectedFaq.conditionalAnswers)">
@@ -243,17 +243,22 @@
                                             <ng-container *ngFor="let answer of selectedFaq.conditionalAnswers.answers" (click)="logAns(answer)">
                                                 <div *ngIf="selectedFaq.conditionalAnswers && selectedFaq.conditionalAnswers.conditions && selectedFaq.conditionalAnswers.conditions.length">
                                                     <span *ngFor="let tags of selectedFaq.conditionalAnswers.conditions">{{tags.value}}</span>
-                                                </div>
-                                                <div class="desc" *ngIf="answer.type==='string'" [innerHtml]='convertMDtoHTML.helpers.convertMDtoHTML(answer.payload)'></div>
-                                                 <div class="desc" *ngIf="answer.type==='javascript'">Javascript message</div>
+                                                </div>                                                
+                                                <div class="desc-info" *ngIf="answer.type==='string'" [innerHtml]='convertMDtoHTML.helpers.convertMDtoHTML(answer.payload)'></div>
+                                                 <div class="desc-info desc-info-javascript-message" *ngIf="answer.type==='javascript'">Javascript message</div>
                                             </ng-container> 
                                         </ng-container>
                                     </div>
-                                    <div>
+                                    <div class="bot-response-view-mode">
                                         <ng-container *ngIf="selectedFaq && selectedFaq.defaultAnswers && selectedFaq.defaultAnswers.length">
                                             <ng-container *ngFor="let answer of selectedFaq.defaultAnswers">
-                                                <div class="desc" *ngIf="answer.type==='string'" [innerHtml]='convertMDtoHTML.helpers.convertMDtoHTML(answer.payload)'></div>
-                                                 <div class="desc" *ngIf="answer.type==='javascript'">Javascript message</div>
+                                                <div class="bot-response-title">Bot Response</div> 
+                                                <div class="condition-tags">Conditions : <span>account,</span></div>
+                                                <div class="img-view-mode desc-info">
+                                                    <img src="assets/icons/img-dummy.svg">
+                                                </div>
+                                                <div class="desc-info" *ngIf="answer.type==='string'" [innerHtml]='convertMDtoHTML.helpers.convertMDtoHTML(answer.payload)'></div>
+                                                <div class="desc-info desc-info-javascript-message" *ngIf="answer.type==='javascript'">Javascript message</div>
                                             </ng-container> 
                                         </ng-container>
                                     </div>
