--- a/findly-builder/src/app/components/faq-source/faq-source.component.scss
+++ b/findly-builder/src/app/components/faq-source/faq-source.component.scss
@@ -518,12 +518,41 @@
                                 .keys{
                                     padding: 0 0 0 8px;
                                 }
+                            }                            
+                            .bot-response-title{
+                                color: #9AA0A6;
+                                font-weight: 500;
+                                font-size: 12px;
+                                text-transform: uppercase;
+                                margin-bottom: 2px;
+                                margin-top: 15px;
                             }
-                            .added-answer{
+                            .condition-tags{
+                                color: #9AA0A6;
+                                font-weight: normal;
+                                font-size: 12px;
+                            }
+                            .conditionalBlock{
                                 color: #202124;
-                                font-size: 14px;
-                                padding: 15px 0 10px 0;
-                                line-height: 21px;
+                                font-size: 14px;                                                                                              
+                            }
+                            .bot-response-view-mode{                                                              
+                                .desc-info{
+                                    line-height: 21px;
+                                    padding: 10px 0 20px 0;
+                                    border-bottom: 1px solid #E4E5E7;
+                                    &:last-child{
+                                        border: 0;
+                                        padding-bottom: 0;
+                                    }
+                                }
+                                .img-view-mode{
+                                    img{
+                                        border-radius: 10px;
+                                        width: 100%;
+                                        // height: 200px;                                        
+                                    }
+                                }
                             }
                         }
                         .appearences-info{
