display issue with faqs conditional answers

--- a/findly-builder/src/app/components/faq-source/faq-source.component.html
+++ b/findly-builder/src/app/components/faq-source/faq-source.component.html
@@ -238,24 +238,35 @@
                                         <span class="key-title">Key Terms :</span>
                                         <span class="keys" *ngFor="let keyword of selectedFaq.keywords">{{keyword}}</span>
                                     </div>  
-                                    <div class="conditionalBlock" (click)="logAns(selectedFaq.conditionalAnswers)">
-                                        <ng-container *ngIf="selectedFaq && selectedFaq.conditionalAnswers && selectedFaq.conditionalAnswers.answers && selectedFaq.conditionalAnswers.answers.length">
-                                            <ng-container *ngFor="let answer of selectedFaq.conditionalAnswers.answers" (click)="logAns(answer)">
-                                                <div *ngIf="selectedFaq.conditionalAnswers && selectedFaq.conditionalAnswers.conditions && selectedFaq.conditionalAnswers.conditions.length">
-                                                    <span *ngFor="let tags of selectedFaq.conditionalAnswers.conditions">{{tags.value}}</span>
+                                    <div class="conditionalBlock bot-response-view-mode" >
+                                        <ng-container *ngIf="selectedFaq && selectedFaq.conditionalAnswers && selectedFaq.conditionalAnswers.length">
+                                        <ng-container *ngFor="let consitionalAnswer of selectedFaq.conditionalAnswers">
+                                            <div class="bot-response-title">Bot Response</div> 
+                                            <div class="condition-tags">Conditions : <span *ngIf="consitionalAnswer && consitionalAnswer.answers && consitionalAnswer.conditions.length"><span *ngFor="let item of consitionalAnswer.conditions;  let index = index"><span *ngIf="index">,</span>{{item.value}}</span></span></div>
+                                            <div *ngIf="consitionalAnswer && consitionalAnswer.answers && consitionalAnswer.answers.length">
+                                                <div *ngFor="let ans of consitionalAnswer.answers">
+                                                    <div class="img-view-mode desc-info" *ngIf="ans.multimedia && ans.multimedia.url">
+                                                        <img src="{{ans.multimedia.url}}">
+                                                    </div>
+                                                    <ng-container>
+                                                        <div class="desc-info" *ngIf="ans.type==='string'" [innerHtml]='convertMDtoHTML.helpers.convertMDtoHTML(ans.payload)'></div>
+                                                         <div class="desc-info desc-info-javascript-message" *ngIf="ans.type==='javascript'">Javascript message</div>
+                                                    </ng-container> 
+                                                </div>
+                                            </div>
                                                 </div>                                                
-                                                <div class="desc-info" *ngIf="answer.type==='string'" [innerHtml]='convertMDtoHTML.helpers.convertMDtoHTML(answer.payload)'></div>
-                                                 <div class="desc-info desc-info-javascript-message" *ngIf="answer.type==='javascript'">Javascript message</div>
+                                            </div>
+                                        </ng-container>
                                             </ng-container> 
+                                        </ng-container>
                                         </ng-container>
                                     </div>
                                     <div class="bot-response-view-mode">
                                         <ng-container *ngIf="selectedFaq && selectedFaq.defaultAnswers && selectedFaq.defaultAnswers.length">
                                             <ng-container *ngFor="let answer of selectedFaq.defaultAnswers">
                                                 <div class="bot-response-title">Bot Response</div> 
-                                                <div class="condition-tags">Conditions : <span>account,</span></div>
-                                                <div class="img-view-mode desc-info">
-                                                    <img src="assets/icons/img-dummy.svg">
+                                                <div class="img-view-mode desc-info" *ngIf="answer && answer.multimedia && answer.multimedia.url">
+                                                    <img src="{{answer.multimedia.url}}">
                                                 </div>
                                                 <div class="desc-info" *ngIf="answer.type==='string'" [innerHtml]='convertMDtoHTML.helpers.convertMDtoHTML(answer.payload)'></div>
                                                 <div class="desc-info desc-info-javascript-message" *ngIf="answer.type==='javascript'">Javascript message</div>
