in left nav pdate ML configuration to NLP & Machine Learning

--- a/findly-builder/src/app/components/app-menu/app-menu.component.html
+++ b/findly-builder/src/app/components/app-menu/app-menu.component.html
@@ -68,7 +68,7 @@
 					<img src="assets/icons/sidemenu/new-icons/ml.svg" class="defaultIcon">	
 					<img src="assets/icons/sidemenu/new-icons/ml-active.svg" class="activeIcon">			
 				</span>
-				<span class="linkTitle">ML configuration</span>
+				<span class="linkTitle">NLP & Machine Learning</span>
 			</div>
 
 		<div mat-button class="mat-button" [routerLink]="['/traits']" skipLocationChange routerLinkActive="active" (click)="preview('traits')" mat-button>
