--- a/findly-builder/src/app/components/ml-threshold/ml-threshold.component.html
+++ b/findly-builder/src/app/components/ml-threshold/ml-threshold.component.html
@@ -32,7 +32,7 @@
                     <div class="slider"> <span class="no">No</span><span class="yes">Yes</span></div>
                 </label>
         </div>
-        <h2 class="headerTitle">NLP & Machine Learning</h2>
+        <h2 class="headerTitle">Machine Learning</h2>
 
         <div class="sliderContainer">
             <div class="label">NER Model </div>
